Support recovering from repository in different namespace (#474)
* Support recovering from different namespace
* Implemented recover from different namespace + Fix+Added test
* docs updated + refactored
* refactored snapshot test
* fixed typo in StatefulSet test
* fixed default KubeConfig override in test init()
* e2e delete namespace fixed
* Update recovery.md
* fixed swift backend
* fixed rbac for recovery + test refactored
* ensured clusterrole for Repository while recovery + added selfhosted-operator mode for test
