# apis/stash/v1alpha1/validator.go
@@ -43,19 +43,22 @@ func (r Recovery) IsValid() error {
 		return fmt.Errorf("missing recovery volume")
 	}
 
-	if r.Spec.Repository == "" {
+	if r.Spec.Repository.Name == "" {
 		return fmt.Errorf("missing repository name")
 	} else {
-		if !(strings.HasPrefix(r.Spec.Repository, "deployment.") ||
-			strings.HasPrefix(r.Spec.Repository, "replicationcontroller.") ||
-			strings.HasPrefix(r.Spec.Repository, "replicaset.") ||
-			strings.HasPrefix(r.Spec.Repository, "statefulset.") ||
-			strings.HasPrefix(r.Spec.Repository, "daemonset.")) {
+		if !(strings.HasPrefix(r.Spec.Repository.Name, "deployment.") ||
+			strings.HasPrefix(r.Spec.Repository.Name, "replicationcontroller.") ||
+			strings.HasPrefix(r.Spec.Repository.Name, "replicaset.") ||
+			strings.HasPrefix(r.Spec.Repository.Name, "statefulset.") ||
+			strings.HasPrefix(r.Spec.Repository.Name, "daemonset.")) {
 			return fmt.Errorf("invalid repository name")
 		}
 	}
+	if r.Spec.Repository.Namespace == "" {
+		return fmt.Errorf("missing repository namespace")
+	}
 	if r.Spec.Snapshot != "" {
-		if !strings.HasPrefix(r.Spec.Snapshot, r.Spec.Repository+"-") {
+		if !strings.HasPrefix(r.Spec.Snapshot, r.Spec.Repository.Name+"-") {
 			return fmt.Errorf("invalid snapshot name")
 		}
 	}
